# voice_athena

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  REPOSITORY_GUIDE.md
app/: .env.security  CLAUDE.md  INTERVIEW_FIXES.md  README.md  SECURITY.md  SETUP_CODING_PLATFORM.md  add_sql_problems.py  cookies.txt  create_favicon.py  favicon-preview.html  final_sql_schema_update.py  fix_sql_solutions.py  pyproject.toml  run_athena.py  server.py  update_all_sql_schemas.py  update_sql_schemas.py
app/athena/: __init__.py  main.py
app/athena/agents/: __init__.py
app/athena/api/: __init__.py
app/athena/core/: __init__.py  app.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  middleware.py  security.py
app/athena/models/: __init__.py  schemas.py
app/athena/services/: __init__.py  interview_agent_service.py  interview_service.py  judge0_service.py  problem_service.py  user_service.py
app/athena/utils/: __init__.py
app/backend/: __init__.py
app/backend/api/: __init__.py
app/backend/config/: __init__.py  database.py  settings.py
app/backend/core/: __init__.py  exceptions.py  middleware.py  security.py
app/scripts/: add_sql_problems.py  create_favicon.py  final_sql_schema_update.py  fix_sql_solutions.py  update_all_sql_schemas.py  update_sql_schemas.py
app/static/: app.js  dashboard.html  database.html  index.html  login.html  problem.html  problems.html
app/tests/: __init__.py  browser_cookies.txt  flow_cookies.txt  fresh_cookies.txt  real_test.txt  test_cookies.txt  test_session.txt
(+27 files in other folders)
