[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.116.1",
    "openai-agents>=0.2.3",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
