[project]
name = "athena"
version = "1.0.0"
description = "AI-Powered SQL Technical Interview Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.116.1",
    "openai-agents>=0.2.3",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
athena = "athena.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
